# ChangeLog for dev-lang/swig
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/swig/ChangeLog,v 1.102 2007/11/21 17:44:18 lavajoe Exp $

  21 Nov 2007; Joe Peterson <lavajoe@gentoo.org> swig-1.3.32.ebuild:
  Added ~x86-fbsd keyword (bug #199368)

  21 Nov 2007; Raúl Porcel <armin76@gentoo.org> swig-1.3.32.ebuild:
  Add ~alpha/~ia64 wrt #199368

  21 Nov 2007; Markus Rothe <corsair@gentoo.org> swig-1.3.32.ebuild:
  Added ~ppc64; bug #199368

  20 Nov 2007; Ferris McCormick <fmccor@gentoo.org> swig-1.3.32.ebuild:
  Add back ~sparc keyword, Bug #199368.  USE=clisp, mzscheme were already masked
  for sparc.  For this version of swig, I also package.use.mask'ed chicken and
  pike for swig because sparc has no keyword for either of them.

  19 Nov 2007; Jeroen Roovers <jer@gentoo.org> swig-1.3.32.ebuild:
  Marked ~hppa (bug #199368).

*swig-1.3.32 (16 Nov 2007)

  16 Nov 2007; Marijn Schouten <hkBst@gentoo.org> +swig-1.3.32.ebuild:
  bump; add chicken, clisp, mzscheme and R use flags, deps and use_with's;
  drop keywords because of new deps

  31 Jul 2007; Marijn Schouten <hkBst@gentoo.org> metadata.xml:
  take over maintainership

  14 Jul 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Assigning dev-lang/swig to m-needed, as chriswhite has been retired (#56211).

  12 Jul 2007; Roy Marples <uberlord@gentoo.org> swig-1.3.31.ebuild:
  Keyworded ~sparc-fbsd

  13 May 2007; Joshua Kinard <kumba@gentoo.org> swig-1.3.31.ebuild:
  Stable on mips.

  27 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> swig-1.3.25.ebuild:
  Fix incomplete dev-lisp/mzscheme -> dev-scheme/mzscheme move.

  15 Feb 2007; Bryan Østergaard <kloeri@gentoo.org> swig-1.3.31.ebuild:
  Stable on Alpha, bug 166246.

  14 Feb 2007; Bryan Østergaard <kloeri@gentoo.org> swig-1.3.31.ebuild:
  Stable on IA64, bug 166246.

  13 Feb 2007; Lars Weiler <pylon@gentoo.org> swig-1.3.31.ebuild:
  Stable on ppc; bug #166246.
