@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/swig
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swig/ChangeLog,v 1.102 2007/11/21 17:44:18 lavajoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swig/ChangeLog,v 1.103 2007/11/24 11:30:12 hkbst Exp $
+
+*swig-1.3.33 (24 Nov 2007)
+
+  24 Nov 2007; Marijn Schouten <hkBst@gentoo.org> +swig-1.3.33.ebuild:
+  bump
 
   21 Nov 2007; Joe Peterson <lavajoe@gentoo.org> swig-1.3.32.ebuild:
   Added ~x86-fbsd keyword (bug #199368)
